
Updated to zlib 1.2.11

*** ROM SUPPORT *** Thanks to Flipprojets.fr for all the GTS80b-sets (plus Free Play patches), ipdb.org, exegeta for all the LTD and Taito games and clones
New:
LTD: Arizona, Columbia, Cowboy Eight Ball, Disco Dancing, Force, Haunted Hotel, Hustler, Martian Queen, King Kong, Space Poker, Time Machine, Trick Shooter, Viking King
Taito: Volley (formerly known as Voley Ball and missing most dumps)

Clones:
Amazon Hunt II (French Free Play)
Amazon Hunt III (French Free Play)
Amazon Hunt III (rev. 1 French)
Amazon Hunt III (rev. 1 French Free Play)
Arena (Free Play)
Arena (French)
Arena (French Free Play)
Arena (German)
Arena (German Free Play)
Arena (rev. 1 Free Play)
Bad Girls (Free Play)
Bad Girls (French)
Bad Girls (French Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Bad Girls (German)
Bad Girls (German Free Play) (enabled by setting the maximum number of credits to 20 (both DIP 15 and 16 ON))
Big House (Free Play)
Big House (French)
Big House (French Free Play)
Big House (German)
Big House (German Free Play)
Bone Busters Inc. (Free Play)
Bone Busters Inc. (French Free Play)
Bone Busters Inc. (German)
Bone Busters Inc. (German Free Play)
Bounty Hunter (Free Play)
Bounty Hunter (German)
Bounty Hunter (German Free Play)
Caveman (Evolution, unofficial MOD)
Chicago Cubs Triple Play (Free Play)
Chicago Cubs Triple Play (rev. 1 Free Play)
Diamond Lady (Free Play)
Diamond Lady (French)
Diamond Lady (French Free Play)
Diamond Lady (German)
Diamond Lady (German Free Play)
Excalibur
Excalibur (Free Play)
Excalibur (French Free Play)
Genesis (Free Play)
Genesis (French)
Genesis (French Free Play)
Genesis (German)
Genesis (German Free Play)
Gold Wings (Free Play)
Gold Wings (French)
Gold Wings (French Free Play)
Gold Wings (German)
Gold Wings (German Free Play)
Haunted House (rev. 3 unofficial MOD)
Haunted House (rev. 3 unofficial MOD, LED)
Haunted House (rev. 3 unofficial MOD, LED+Secret Tunnel)